Add docker_weatherAPI it works commands to create and run docker :'docker build -t weather:Kyiv .', 'docker run -p 5000:5000 weather:Kyiv'

--- a/docker_weatherAPI/app/templates/index.html
+++ b/docker_weatherAPI/app/templates/index.html
@@ -9,7 +9,7 @@
     <h1>Погода в києві:</h1>
     <p>Погода: <span id="weather">Error</span></p>
     <p>Температура: <span id="temperature">0.0</span> C°</p>
-    <p>Тиск: <span id="pressure">0</span> Pa</p>
+    <p>Тиск: <span id="pressure">0</span> GPa</p>
 
     <script>
 	async function fetchValuta1() {
